--- a/common/math/graphics/wavelets/h_1_1_1_1_pz.tex
+++ b/common/math/graphics/wavelets/h_1_1_1_1_pz.tex
@@ -45,19 +45,19 @@
   \rput[l](-2.5,-0.5){\rnode[t]{z1label}{$\scy{z=-1}$}}%
   \ncline[linestyle=dotted,linecolor=zero,nodesepA=1pt]{->}{z1label}{z1node}%
   %-------------------------------------
-  % zero at z = z2 = 1/2( -1 + i*sqrt(3) )
+  % zero at z = z2 = i
   %-------------------------------------
-  \pnode(-0.5, 0.866025403784439){z2}%
+  \pnode(0, 1){z2}%
   \Cnode[linewidth=1pt](z2){z2node}%
-  \rput[tl](-2.5, 1.7){\rnode[r]{z2label}{$\scy{z=-\frac{1}{2}+i\frac{\sqrt{3}}{2}}$}}%
+  \rput[tr](-1.25, 1.7){\rnode[b]{z2label}{$\scy{z=+i}$}}%
   \ncline[linestyle=dotted,linecolor=zero,nodesepA=1pt]{->}{z2label}{z2node}%
   \ncline[linestyle=dashed]{origin}{z2}%
   %-------------------------------------
-  % zero at z = z3 = 1/2( -1 - i*sqrt(3) )
+  % zero at z = z3 = -i
   %-------------------------------------
-  \pnode(-0.5,-0.866025403784439){z3}%
+  \pnode(0,-1){z3}%
   \Cnode[linewidth=1pt](z3){z3node}%
-  \rput[bl](-2.5,-1.7){\rnode[r]{z3label}{$\scy{z=-\frac{1}{2}-i\frac{\sqrt{3}}{2}}$}}%
+  \rput[br](-1.25,-1.7){\rnode[b]{z3label}{$\scy{z=-i}$}}%
   \ncline[linestyle=dotted,linecolor=zero,nodesepA=1pt]{->}{z3label}{z3node}%
   \ncline[linestyle=dashed]{origin}{z3}%
   %-------------------------------------
