--- a/common/math/graphics/wavelets/h_1_3_2_phi_h.tex
+++ b/common/math/graphics/wavelets/h_1_3_2_phi_h.tex
@@ -6,9 +6,9 @@
   %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0, 0.235702260395516){h0}%
-  \pnode(1, 0.707106781186548){h1}%
-  \pnode(2, 0.471404520791032){h2}%
+  \pnode(0, 0.235702260395516){h0}%  [sqrt(2)/6]*1
+  \pnode(1, 0.707106781186548){h1}%  [sqrt(2)/6]*3
+  \pnode(2, 0.471404520791032){h2}%  [sqrt(2)/6]*2
   %-------------------------------------
   % plot
   %-------------------------------------
