--- a/common/math/graphics/wavelets/h_1_3_2_psi_g.tex
+++ b/common/math/graphics/wavelets/h_1_3_2_psi_g.tex
@@ -6,9 +6,9 @@
   %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0, 0.235702260395516){g0}%
-  \pnode(1,-0.707106781186548){g1}%
-  \pnode(2, 0.471404520791032){g2}%
+  \pnode(0, 0.471404520791032){g0}%  [sqrt(2)/6]*2
+  \pnode(1,-0.707106781186548){g1}% -[sqrt(2)/6]*3
+  \pnode(2, 0.235702260395516){g2}%  [sqrt(2)/6]*1
   %-------------------------------------
   % plot
   %-------------------------------------
@@ -28,7 +28,7 @@
   %-------------------------------------
   % data labels
   %-------------------------------------
-  \uput{3pt}[155](g0){$\scy\frac{ \sqrt{2}}{6}\cdot1$}%
+  \uput{3pt}[155](g0){$\scy\frac{ \sqrt{2}}{6}\cdot2$}%
   \uput{3pt}[180](g1){$\scy\frac{-\sqrt{2}}{6}\cdot3$}%
-  \uput{2pt}[ 90](g2){$\scy\frac{ \sqrt{2}}{6}\cdot2$}%
+  \uput{2pt}[ 90](g2){$\scy\frac{ \sqrt{2}}{6}\cdot1$}%
 \end{pspicture}%
