--- a/common/math/graphics/wavelets/h_1_1_1_1_phi_h.tex
+++ b/common/math/graphics/wavelets/h_1_1_1_1_phi_h.tex
@@ -6,33 +6,33 @@
   %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0, 0.235702260395516){g0}%  [sqrt(2)/6]*1  
-  \pnode(1,-0.471404520791032){g1}% -[sqrt(2)/6]*2
-  \pnode(2, 0.471404520791032){g2}%  [sqrt(2)/6]*2
-  \pnode(3,-0.235702260395516){g3}% -[sqrt(2)/6]*1
+  \pnode(0, 0.353553390593274){h0}% [sqrt(2)/4]*1
+  \pnode(1, 0.353553390593274){h1}% [sqrt(2)/4]*1
+  \pnode(2, 0.353553390593274){h2}% [sqrt(2)/4]*1
+  \pnode(3, 0.353553390593274){h3}% [sqrt(2)/4]*1
   %-------------------------------------
   % plot
   %-------------------------------------
-  \psline(-0.75,0)(0,0)%
-  \psline(3,0)(3.25,0)%
-  \fileplot{../wavelets/h_1_2_2_1_psi.dat}%
+  \psline(-0.75,0)(0,0)(1,0.5)(2,0.5)(3,0)(3.25,0)%
+ %\psline(3,0)(3.25,0)%
+ %\fileplot{../wavelets/h_1_2_2_1_phi.dat}%
   \psaxes[linecolor=axis,yAxis=false,labels=none,linewidth=0.75pt]{<->}(0,0)(-1,-1.5)(3.5,1.5)%  x-axis
   \psaxes[linecolor=axis,xAxis=false,linewidth=0.75pt]{<->}(0,0)(-1,-1.5)(3.5,1.5)% y-axis
-  \psline[linecolor=red]{-o}(0,0)(g0)%
-  \psline[linecolor=red]{-o}(1,0)(g1)%
-  \psline[linecolor=red]{-o}(2,0)(g2)%
-  \psline[linecolor=red]{-o}(3,0)(g3)%
+  \psline[linecolor=red]{-o}(0,0)(h0)%
+  \psline[linecolor=red]{-o}(1,0)(h1)%
+  \psline[linecolor=red]{-o}(2,0)(h2)%
+  \psline[linecolor=red]{-o}(3,0)(h3)%
   %-------------------------------------
   % axis labels
   %-------------------------------------
- %\uput{2mm}[-90](1,0){$1$}%
+  \uput{2mm}[-90](1,0){$1$}%
   \uput{2mm}[-90](2,0){$2$}%
- %\uput{2mm}[-90](3,0){$3$}%
+  \uput{2mm}[-90](3,0){$3$}%
   %-------------------------------------
   % data labels
   %-------------------------------------
-  \uput{2pt}[ 45](g0){$\scy \frac{\sqrt{2}}{6}\cdot1$}%
-  \uput{3pt}[-90](g1){$\scy-\frac{\sqrt{2}}{6}\cdot2$}%
-  \uput{3pt}[ 90](g2){$\scy \frac{\sqrt{2}}{6}\cdot2$}%
-  \uput{3pt}[-90](g3){$\scy-\frac{\sqrt{2}}{6}\cdot1$}%
+  \uput{3pt}[150](h0){$\scy\frac{\sqrt{2}}{4}\cdot1$}%
+  \uput{3pt}[ 90](h1){$\scy\frac{\sqrt{2}}{4}\cdot1$}%
+  \uput{3pt}[ 90](h2){$\scy\frac{\sqrt{2}}{4}\cdot1$}%
+  \uput{3pt}[ 90](h3){$\scy\frac{\sqrt{2}}{4}\cdot1$}%
 \end{pspicture}%
