--- a/common/math/graphics/wavelets/h_2_3_1_psi_g.tex
+++ b/common/math/graphics/wavelets/h_2_3_1_psi_g.tex
@@ -6,9 +6,9 @@
   %-------------------------------------
   % nodes
   %-------------------------------------
-  \pnode(0, 0.471404520791032){g0}%
-  \pnode(1,-0.707106781186548){g1}%
-  \pnode(2, 0.235702260395516){g2}%
+  \pnode(0, 0.235702260395516){g0}%  [sqrt(2)/6]*1
+  \pnode(1,-0.707106781186548){g1}%  [sqrt(2)/6]*3
+  \pnode(2, 0.471404520791032){g2}%  [sqrt(2)/6]*2
   %-------------------------------------
   % plot
   %-------------------------------------
@@ -28,7 +28,7 @@
   %-------------------------------------
   % data labels
   %-------------------------------------
-  \uput{3pt}[165](g0){$\scy \frac{\sqrt{2}}{6}\cdot2$}%
-  \uput{3pt}[-45](g1){$\scy-\frac{\sqrt{2}}{6}\cdot3$}%
-  \uput{2pt}[ 90](g2){$\scy \frac{\sqrt{2}}{6}\cdot1$}%
+  \uput{3pt}[135](g0){$\scy \frac{\sqrt{2}}{6}\cdot1$}%
+  \uput{3pt}[-30](g1){$\scy-\frac{\sqrt{2}}{6}\cdot3$}%
+  \uput{2pt}[ 90](g2){$\scy \frac{\sqrt{2}}{6}\cdot2$}%
 \end{pspicture}%
