--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -906,7 +906,7 @@ Note two details:
 Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
   \brb{\begin{array}{FMMD}
-      1. & $\support\fphi(x)=\intcc{0}{2}$                                & \xref{thm:mra_support} & and
+      1. & $\support\fphi(x)=\intcc{0}{3}$                                & \xref{thm:mra_support} & and
     \\2. & \prope{admissibility condition}                                & \xref{thm:admiss}      & and
     \\3. & \prope{partition of unity}                                     & \xref{thm:pun_zero}    & and
     \\4. & $\Zh(z)$ has 2 roots at $z=-\frac{1}{2}\pm i\frac{\sqrt{3}}{2}$ &                        &
@@ -947,7 +947,7 @@ Let $\wavsys$ be a \structe{wavelet system}.
 Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
   \brb{\begin{array}{FMMD}
-      1. & $\support\fphi(x)=\intcc{0}{2}$                                & \xref{thm:mra_support} & and
+      1. & $\support\fphi(x)=\intcc{0}{3}$                                & \xref{thm:mra_support} & and
     \\2. & \prope{admissibility condition}                                & \xref{thm:admiss}      & and
     \\3. & \prope{partition of unity}                                     & \xref{thm:pun_zero}    & and
     \\4. & $\Zh(z)$ has 2 roots at $z=\pm i$                              &                        &
@@ -979,6 +979,36 @@ Let $\wavsys$ be a \structe{wavelet system}.
                                     { z^3 } }
   \\&= \frac{\sqrt{2}}{4} \brs{ 1 + 1z^{-1} + 1z^{-2} + 1z^{-3} }
 \end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{example}
+\label{ex:h_1_0_0_1}
+%--------------------------------------
+Let $\wavsys$ be a \structe{wavelet system}.
+\exbox{
+  \brb{\begin{array}{FMMD}
+      1. & \prope{admissibility condition}                                & \xref{thm:admiss}      & and
+    \\2. & $\Zh(z)$ has the roots of $z^3+1=0$                            &                        &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{|r|r|}%
+    n  & \fh_{n}
+    \\\hline
+      0 & \frac{\sqrt{2}}{2} \cdot 1
+    \\1 & \frac{\sqrt{2}}{2} \cdot 0
+    \\2 & \frac{\sqrt{2}}{2} \cdot 0
+    \\3 & \frac{\sqrt{2}}{2} \cdot 1
+    \\\text{other} & 0
+  \end{array}}
+  }
+  \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_0_0_1_pz.pdf}}
+     \quad\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_0_0_1_phi_h.pdf}}
+     \quad\tbox{\includegraphics{../common/math/graphics/pdfs/h_1_0_0_1_psi_g.pdf}}
+  \\
+\end{example}
+\begin{proof}
+See \prefpp{lem:roots_xn}.
 \end{proof}
 
 
