--- a/common/math/graphics/bsplines/b1_g.tex
+++ b/common/math/graphics/bsplines/b1_g.tex
@@ -57,7 +57,7 @@
   \psline[linecolor=red]{-o}(1,0)(g1)%
   \psline[linecolor=red]{-o}(2,0)(g2)%
   \uput{1pt}[45](g0){$\scy\frac{\sqrt{2}}{4}$}%
-  \uput{2pt}[-45](g1){$\scy\frac{-2\sqrt{2}}{4}=0.707\cdots$}%
-  \uput{2pt}[80](g2){$\scy\frac{\sqrt{2}}{4}=0.353\cdots$}%
+  \uput{3pt}[-15](g1){$\scy\frac{-2\sqrt{2}}{4}$}%
+  \uput{2pt}[45](g2){$\scy\frac{\sqrt{2}}{4}$}%
   \uput{2pt}[180](-0.25,0.5){$\sfrac{1}{2}$}%
 \end{pspicture}%
