--- a/common/math/graphics/bsplines/n1_h.tex
+++ b/common/math/graphics/bsplines/n1_h.tex
@@ -4,12 +4,12 @@
 % 1st order B-spline
 % nominal unit = 10mm
 %============================================================================
-\begin{pspicture}(-1,-0.5)(3,1.5)
+\begin{pspicture}(-1,-1.5)(3,1.5)
   %-------------------------------------
   % axes
   %-------------------------------------
   \psaxes[linewidth=0.75pt,linecolor=axis,yAxis=false,ticks=none,labels=none]{<->}(0,0)(-1,0)(3,1.5)% x axis
-  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=none,labels=none]{->}(0,0)(-1,0)(3,1.5)%  y axis
+  \psaxes[linewidth=0.75pt,linecolor=axis,xAxis=false,ticks=none,labels=none]{<->}(0,0)(-1,-1.5)(3,1.5)%  y axis
   %-------------------------------------
   % annotation
   %-------------------------------------
@@ -40,13 +40,13 @@
   % h_k = -------- (   ) = (0.35355339059327376220042218105...) x {1, 2, 1}
   %        2^(n+1) ( k )
   %-------------------------------------
-  \pnode(0, 0.3535533906){h0}%
-  \pnode(1, 0.7071067812){h1}%
-  \pnode(2, 0.3535533906){h2}%
+  \pnode(0, 0.3535533906){h0}% 1 * sqrt(2)/4
+  \pnode(1, 0.7071067812){h1}% 2 * sqrt(2)/4
+  \pnode(2, 0.3535533906){h2}% 1 * sqrt(2)/4
   \psline[linecolor=red]{-o}(0,0)(h0)%
   \psline[linecolor=red]{-o}(1,0)(h1)%
   \psline[linecolor=red]{-o}(2,0)(h2)%
-  \uput{3pt}[0](h0){$\scy\frac{\sqrt{2}}{4}=0.353\cdots$}%
-  \uput{2pt}[30](h1){$\scy\frac{2\sqrt{2}}{4}=0.707\cdots$}%
-  \uput{3pt}[0](h2){$\scy\frac{\sqrt{2}}{4}$}%
+  \uput{3pt}[150](h0){$\scy\frac{\sqrt{2}}{4}\cdot1$}%
+  \uput{2pt}[ 30](h1){$\scy\frac{\sqrt{2}}{4}\cdot2$}%
+  \uput{3pt}[ 30](h2){$\scy\frac{\sqrt{2}}{4}\cdot1$}%
 \end{pspicture}%
