system of equations for 2 vanishing moments

--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -923,11 +923,11 @@ of \structe{B-spline}s \xref{def:Bspline}.
 
 %---------------------------------------
 \begin{lemma}
-\label{lem:van_factor}
 \footnote{
   \citerp{dau}{155},
   \citerpp{vidakovic}{80}{82}
   }
+\label{lem:van_factor}
 %---------------------------------------
 Let $\wavsys$ be a \structe{wavelet system} \xref{def:wavsys}.
 Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
@@ -1006,116 +1006,123 @@ Let $\seqnZ{q_n}$ be a sequence with \ope{z-transform} \xref{def:opZ} $\Zq(z)$.
 %=======================================
 %--------------------------------------
 \begin{example}[\exmd{order 1 B-spline wavelet system}]
-\label{ex:pun_n=3}
+%\label{ex:pun_n=3}
 %--------------------------------------
 Let $\wavsys$ be a \structe{wavelet system}.
 \exbox{
   \brb{\begin{array}{FMMD}
-      1. & $\support\fphi(x)=\intcc{0}{2}$ & \xref{thm:mra_support}  & and
-    \\2. & \prope{admissibility condition} & \xref{thm:admiss}       & and
-    \\3. & \prope{partition of unity}      & \xref{thm:pun_zero}     & and
-    \\4. & \prope{1 vanishing moment}      & \xref{thm:gh_cqf}       &
+      (1). & $\support\fphi(x)=\intcc{0}{2}$     & \xref{thm:mra_support}  & and
+    \\(2). & \prope{admissibility condition}     & \xref{thm:admiss}       & and
+    \\(3). & \prope{partition of unity} /        & \xref{thm:pun_zero}     &
+    \\     & \quad\prope{vanishing 0th moment}   &                         & and
+    \\(4). & \prope{vanishing 1st moment}        & \xref{thm:gh_cqf}       &
   \end{array}}
   \implies
-  \brb{\begin{array}{r|>{\ds}l}
+  \brb{\begin{array}{c|r}
       n            & \fh_{n}
     \\\hline
       0            & \frac{\sqrt{2}}{4}\cdot1
     \\1            & \frac{\sqrt{2}}{4}\cdot2
     \\2            & \frac{\sqrt{2}}{4}\cdot1
-    \\\text{other} & 0 
+    \\\text{other} & 0
   \end{array}}
   }
 \\\indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n1_pz.pdf}}
-  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/n1_h.pdf}}
-  \indentx\tbox{\includegraphics{../common/math/graphics/pdfs/b1_g.pdf}}
+     \quad\tbox{\includegraphics{../common/math/graphics/pdfs/n1_h.pdf}}
+     \quad\tbox{\includegraphics{../common/math/graphics/pdfs/b1_g.pdf}}
 \end{example}
 \begin{proof}
 \begin{enumerate}
   \item Proof that (1) $\implies$ that only $h_0$, $h_1$, and $h_2$ are non-zero: by \prefp{thm:mra_support}.
+  \item Proof solving a system of equations:
+    \begin{enumerate}
+      \item System of Equations:
+            \\\indentx$\ds\begin{array}{rcl MM}
+               \fh_0 +\fh_1 +  \fh_2 &=& \sqrt{2} & (\prope{admissibility})        & \xref{thm:admiss}
+            \\ \fh_0 -\fh_1 +  \fh_2 &=& 0        & (\prope{partition of unity})   & \xref{thm:pun_zero}
+            \\0\fh_0 -\fh_1 + 2\fh_2 &=& 0        & (\prope{vanishing 1st moment}) & \xref{thm:gh_cqf}
+            \end{array}$
 
-  \item System of Equations:
-        \\\indentx$\ds\begin{array}{rcl MM}
-           \fh_0 +\fh_1 +  \fh_2 &=& \sqrt{2} & (\prope{admissibility}        & \xref{thm:admiss}   
-        \\ \fh_0 -\fh_1 +  \fh_2 &=& 0        & (\prope{partition of unity}   & \xref{thm:pun_zero} 
-        \\0\fh_0 -\fh_1 + 2\fh_2 &=& 0        & (\prope{1st vanishing moment} & \xref{thm:gh_cqf} 
-        \end{array}$
+      \item System of Equations in Linear/Matrix Algebra form:
+        \begin{align*}
+          \brs{\begin{array}{rrc}
+                1 &  1 &  1
+            \\  1 & -1 &  1
+            \\  0 & -1 &  2
+          \end{array}}
+          \brs{\begin{array}{l}
+               h_0
+            \\ h_1
+            \\ h_2
+          \end{array}}
+          &= \brs{\begin{array}{l}
+                  \sqrt{2}
+               \\ 0
+               \\ 0
+             \end{array}}
+        \end{align*}
 
-  \item System of Equations in Matrix Algebra form:
-    \begin{align*}
-      \brs{\begin{array}{rrc}
-        \\  1 &  1 &  1
-        \\  1 & -1 &  1
-        \\  0 & -1 &  2
-      \end{array}}
-      \brs{\begin{array}{l}
-           h_0
-        \\ h_1
-        \\ h_2
-      \end{array}}
-      &= \brs{\begin{array}{l}
-              \sqrt{2}
-           \\ 0
-           \\ 0
-         \end{array}}
-    \end{align*}
-  
-  \item Solution for $\brs{\begin{array}{ccc} h_0 & h_1 & h_2\end{array}}^T$:
-    \begin{align*}
-      \brs{\begin{array}{rrc|l}
-            1 &  1 &  1 & \sqrt{2}
-        \\  1 & -1 &  1 & 0
-        \\  0 & -1 &  2 & 0
-      \end{array}}
-      &\rightarrow
-      \brs{\begin{array}{rrc|l}
-            0 &  2 &  0 & \sqrt{2}
-        \\  1 & -1 &  1 & 0
-        \\  0 & -1 &  2 & 0
-      \end{array}}
-      &&\rightarrow
-      \brs{\begin{array}{rrc|l}
-            0 &  0 &  4 & \sqrt{2}
-        \\  1 & -1 &  1 & 0
-        \\  0 &  1 & -2 & 0
-      \end{array}}
-      &&\rightarrow
-      \brs{\begin{array}{rrc|l}
-            0 &  0 &  1 & \sqrt{2}/4
-        \\  1 &  0 & -1 & 0
-        \\  0 &  1 & -2 & 0
-      \end{array}}
-      \\&\rightarrow
-      \brs{\begin{array}{rrc|l}
-            0 &  0 &  1 & 1\cdot\sqrt{2}/4
-        \\  1 &  0 &  0 & 1\cdot\sqrt{2}/4
-        \\  0 &  1 &  0 & 2\cdot\sqrt{2}/4
-      \end{array}}
-      &&\rightarrow
-      \brs{\begin{array}{rrc|l}
-            1 &  0 &  0 & 1\cdot\sqrt{2}/4
-        \\  0 &  1 &  0 & 2\cdot\sqrt{2}/4
-        \\  0 &  0 &  1 & 1\cdot\sqrt{2}/4
-      \end{array}}
-      &&\implies
-      \brs{\begin{array}{l}
-           h_0
-        \\ h_1
-        \\ h_2
-      \end{array}}
-      = 
-      \frac{\sqrt{2}}{4}\brs{\begin{array}{l}
-              1
-           \\ 2
-           \\ 1
-      \end{array}}
-    \end{align*}
+      \item Solution for $\brs{\begin{array}{ccc} h_0 & h_1 & h_2\end{array}}^T$:
+        \begin{align*}
+          \brs{\begin{array}{rrc|l}
+                1 &  1 &  1 & \sqrt{2}
+            \\  1 & -1 &  1 & 0
+            \\  0 & -1 &  2 & 0
+          \end{array}}
+          &\rightarrow
+          \brs{\begin{array}{rrc|l}
+                0 &  2 &  0 & \sqrt{2}
+            \\  1 & -1 &  1 & 0
+            \\  0 & -1 &  2 & 0
+          \end{array}}
+          &&\rightarrow
+          \brs{\begin{array}{rrc|l}
+                0 &  0 &  4 & \sqrt{2}
+            \\  1 & -1 &  1 & 0
+            \\  0 &  1 & -2 & 0
+          \end{array}}
+          &&\rightarrow
+          \brs{\begin{array}{rrc|l}
+                0 &  0 &  1 & \sqrt{2}/4
+            \\  1 &  0 & -1 & 0
+            \\  0 &  1 & -2 & 0
+          \end{array}}
+          \\&\rightarrow
+          \brs{\begin{array}{rrc|l}
+                0 &  0 &  1 & 1\cdot\sqrt{2}/4
+            \\  1 &  0 &  0 & 1\cdot\sqrt{2}/4
+            \\  0 &  1 &  0 & 2\cdot\sqrt{2}/4
+          \end{array}}
+          &&\rightarrow
+          \brs{\begin{array}{rrc|l}
+                1 &  0 &  0 & 1\cdot\sqrt{2}/4
+            \\  0 &  1 &  0 & 2\cdot\sqrt{2}/4
+            \\  0 &  0 &  1 & 1\cdot\sqrt{2}/4
+          \end{array}}
+          &&\implies
+          \brs{\begin{array}{l}
+               h_0
+            \\ h_1
+            \\ h_2
+          \end{array}}
+          =
+          \frac{\sqrt{2}}{4}\brs{\begin{array}{l}
+                  1
+               \\ 2
+               \\ 1
+          \end{array}}
+        \end{align*}
 
-  \item Note: $h_0$, $h_1$, $h_2$ can also be produced using other systems of equations including the following:
-    \begin{dingautolist}{"AC}
-      %\item \prope{admissibility condition} and \prope{orthonormality} \xref{ex:ortho_n=3}
-      \item \fncte{Daubechies-$p2$} wavelets computed using spectral techniques\ifsxref{compactp}{ex:dau-p2}
-    \end{dingautolist}
+    \item Proof using \prefpp{lem:van_factor} (and placing two zeros at $z=-1$):
+      \begin{align*}
+        \Zh(z)
+          &= \sqrt{2} \brs{\frac{ \brp{z+1}^2 }
+                                { \brp{1+1}^2 z^2 }}
+           = \frac{\sqrt{2}}{4} \brs{\frac{ z^2 + 2z + 1 }
+                                          { z^2          }}
+           = \frac{\sqrt{2}}{4} \brs{ 1 + 2z^{-1} + z^{-2} }
+      \end{align*}
+  \end{enumerate}
 \end{enumerate}
 \end{proof}
 
